fix button color on iphone

--- a/app/assets/stylesheets/redesign/_user.css.scss
+++ b/app/assets/stylesheets/redesign/_user.css.scss
@@ -31,6 +31,10 @@
 			background: url('_reg/avatar-empty.png') no-repeat center center #e1e1e1;
 		}
 	}
+
+  .btn{
+    background-color: #C0C0C0;
+  }
 }
 // @end Account
 // ---------------
